# jomt

./: CMakeLists.txt  README.md
docs/examples/: bench_results.json
src/: CMakeLists.txt  benchmark_results.cpp  benchmark_results.h  commandline_handler.cpp  commandline_handler.h  main.cpp  mainwindow.cpp  mainwindow.h  plot_parameters.h  plotter_3dbars.cpp  plotter_3dbars.h  plotter_3dbars.ui  plotter_3dsurface.cpp  plotter_3dsurface.h  plotter_3dsurface.ui  plotter_barchart.cpp  plotter_barchart.h  plotter_barchart.ui  plotter_boxchart.cpp  plotter_boxchart.h  plotter_boxchart.ui  plotter_linechart.cpp  plotter_linechart.h  plotter_linechart.ui  result_parser.cpp  result_parser.h  result_selector.cpp  result_selector.h  result_selector.ui  series_dialog.cpp
src/include/: plotter_3dbars.h  plotter_3dsurface.h  plotter_barchart.h  plotter_boxchart.h  plotter_linechart.h
